# timeflux_ui

./: .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml
apps/: circle.yaml  demo.yaml  flicker.yaml  oddball.yaml  operator.yaml  p300.yaml  settings.yaml  speller.yaml  sqi.yaml  stim.yaml
apps/circle/: index.html
apps/circle/assets/: app.js  style.css
apps/demo/: index.html
apps/flicker/: index.html
apps/flicker/assets/css/: style.css
apps/flicker/assets/js/: app.js  flicker.js  states.js
apps/oddball/: index.html
apps/oddball/assets/js/: app.js
apps/operator/: index.html
apps/operator/assets/: app.js
apps/p300/: README.md
apps/p300/assets/js/: app.js  speller.js
apps/settings/: index.html
apps/speller/: README.md  index.html
apps/speller/assets/css/: app.css
apps/speller/assets/js/: app.js  speller.js
apps/sqi/: index.html
apps/sqi/assets/: app.js
apps/stim/: index.html
apps/stim/assets/js/: app.js
examples/: options.yaml
test/: conftest.py  test_ui.py
test/graphs/: custom.yaml  ui.yaml
timeflux_ui/nodes/: meta.py  ui.py
timeflux_ui/nodes/templates/: metaform.html
timeflux_ui/nodes/www/: index.html
timeflux_ui/nodes/www/js/: ui.js
timeflux_ui/www/common/assets/js/: timeflux.js
timeflux_ui/www/monitor/: index.html
timeflux_ui/www/monitor/assets/css/: ui.css
timeflux_ui/www/monitor/assets/js/: smoothie.js  ui.js
timeflux_ui/www/operator/: index.html
timeflux_ui/www/operator/assets/: app.js
