[metadata]
name = timeflux-ui
description = Timeflux web app engine
long_description = file: README.rst
author = Pierre Clisson
author-email = contact@timeflux.io
license = MIT
home-page = https://timeflux.io
project_urls =
    Documentation = http://doc.timeflux.io/projects/timeflux-ui/
    Source Code = https://github.com/timeflux/timeflux_ui
    Bug Tracker = https://github.com/timeflux/timeflux_ui/issues
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords = timeflux

[options]
packages = find:
include_package_data = True
install_requires =
    timeflux>=0.5.3
    aiohttp>=3.6

[options.extras_require]
dev =
    pytest>=5.3
    sphinx>=2.2
    sphinx_rtd_theme>=0.4
    setuptools_scm
    docinit

[docinit]
name = Timeflux web app engine
parent_url = https://doc.timeflux.io
logo_url = https://github.com/timeflux/timeflux/raw/master/doc/static/img/logo.png

[build_sphinx]
warning-is-error = 1